# gitwrapper

./: .gitignore  CHECKLIST.md  CI_CD_SETUP.md  CI_FIX_SUMMARY.md  CONTRIBUTING.md  GIT_COMMIT_GUIDE.md  INSTALLATION.md  LICENSE  PACKAGE_INFO.md  QUICKSTART.md  README.md  SUMMARY.md  gw.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  python-package.yml  test.yml
src/gitwrapper/: __init__.py  cli.py
tests/: __init__.py  test_colors.py  test_config.py  test_history.py  test_utils.py  test_validation.py
